# gefolge.org

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  flake.nix  gefolge.ini  gefolge.org.nginx  www.gefolge.org.nginx
.github/: dependabot.yml
.sqlx/: query-2abd850f1972617a402aab4e752f491eff39fc62cad998a4d7d3c1691c9e83cb.json  query-3e9f721055027405072ff1f57566b518bfc863b6b8955639902a7d42c7ba5f5f.json  query-4aa5d6d1c95d50ba62c01cf244af09caf52c9d7a044c20c70f8d627f14c14efc.json  query-519716c311ec567aee6ca521411e178439c0d7bae8a4f6582ac790e862cc1bbc.json  query-5613295e24047d8035e17c829507d0c3393a001d940f750f81bfa46588e46f62.json  query-5c7e90d4dde41fa2316339dd3d6bf0246ba162115a4f94390693fb3105c88d1f.json  query-618e01d6ec823b5914e593f1da67251cc19e99375c9603e4aecd2bb13d52c39a.json  query-6b806ba6755b5146be30c3d1c2e52f2493e44d3483903283bdb3444117b556bf.json  query-7fe0a43502e853ea13309637447a4f238768c1518d8d96e7741f341932c322ba.json  query-826ba4cc36a0b5e6466b010af070e1eb0f9706f930124c9d6f2aa67947cdc45c.json  query-84633a6abe3b38bb85e40a511f06cda6901439ea6d7529fd6dc1f2bacecae5cc.json  query-86bdc752d8bf66a6852d424c33b807c8266e9157f813fc5b2135dcdd3a3de816.json  query-88a828c708baa6ab638ef54e361bd6acd5e3416e53c72f32dbda27d9dc754378.json  query-8a51aa1f760f8aa6d6a0ae74e98fc1fdabc9fa2c807914741043a8154ea5d5fb.json  query-9c5c0d781a79d3e4d6cbbb28d26e4f29700ee251c9ea3351207b4e4826f855cd.json  query-9f464c573272f9da9d46c3cc0a480da27dc997b9fb072148af95f7479ab12f6a.json  query-a565eecdf01045db638b949ebb929265f7dba208a6a41edd66061832ac1bc040.json  query-b8a22279ec9de1f3bffa5f3bf6e7a80081b98af2d958e93787e67b5fc0adf2ff.json  query-ba06fa42c33fe866cfac24aad4a9d10f4ea8b6757ac1ab7a775fda06eda925c5.json  query-c2d693d01fb62860269f08f3ad758b7575b701ff149d0eb28219135d414830bc.json  query-cb0ffecf4d5cdaf408d4c166a61f2559f8bea869963a1468f21f5d89f6a98c66.json  query-db3cc608a1536f1599395b282206febf70063622733f5cd18f0bb59bfd7ca725.json  query-e3c4db63c83516c069cda46e8ef5c1cd2c2f618bb8377cf522b619823e99b28f.json  query-e750407d0686b6a00efea8fde28f432228ed0be378cf40f4c037da684af94105.json  query-ece9f3f38b3b7f199d67e83f395e361bfd15601e299f04d756d35acdf85303c6.json  query-f0c9b13b116f100c0ac67ff33328cce97f3e79c1b21c70bc2db018e21c9998db.json
assets/: deploy.ps1  deploy.sh  dev-gefolge.ini  dev.gefolge.org.nginx  gefolge-web.service  gefolge.ini  gefolge.org.nginx  gefolge_inner.ini  inner.nginx  pre-commit.ps1  prepare-commit.ps1  www.gefolge.org.nginx
assets/static/: common.css  common.js  dark.css  riir.css  rr
crate/back/: Cargo.toml
crate/back/src/: main.rs
crate/front/: Cargo.toml  build.rs
crate/front/src/: api.rs  auth.rs  config.rs  event.rs  form.rs  games.rs  github_webhook.rs  main.rs  time.rs  user.rs  util.rs  websocket.rs  wiki.rs
crate/lib/: Cargo.toml
crate/lib/src/: auth.rs  config.rs  db.rs  event.rs  lang.rs  lib.rs  money.rs  time.rs  user.rs  websocket.rs
crate/lib/src/peter/: ipc.rs  lang.rs  mod.rs  parse.rs  twitch.rs  user_list.rs  werewolf.rs
crate/paypal/: Cargo.toml
crate/paypal/src/: main.rs
crate/peter-ipc/: Cargo.toml
crate/peter-ipc/src/: lib.rs
crate/peter-python/: Cargo.toml
crate/peter-python/src/: lib.rs
gefolge_web/: __main__.py  api.py  db.py  event.py  forms.py  games.py  login.py  person.py  peter.py  util.py  wiki.py
gefolge_web/event/: __init__.py  forms.py  location.py  model.py
gefolge_web/event/programm/: __init__.py  essen.py  magic.py  wichteln.py
html/: index.html
src/: db.rs  lib.rs  util.rs
static/: common.css  dark.css  dejavu-sans.css  rr  strtime.js
templates/: api-401.html.j2  api-dir.html  api-dir.html.j2  api-docs.html  api-docs.html.j2  base.html  base.html.j2  brainscans-index.html  datetime-format.html  datetime-format.html.j2  event-guest-confirm.html  event-guest-form.html  event-menschen.html  event-profile-edit.html  event-profile.html  event-programm.html  event-programmpunkt-edit.html  event-programmpunkt.html  event.html  events-index.html  games-index.html  games-index.html.j2  index.html  index.html.j2  login-status.html.j2  macros.html  macros.html.j2  menschen-index.html  menschen-index.html.j2  profile-404.html  profile-404.html.j2  profile-edit.html  profile-edit.html.j2  profile.html  profile.html.j2  ricochet-robots  space-alert  space-alert-index.html  werewolf  wiki-404.html  (+6 more)
templates/error/: 403.html  403.html.j2  404.html  404.html.j2  500.html  500.html.j2
templates/event/: 404.html  404.html.j2  custom-magic-draft-set-blurb.html  form-notes-zimmer.html.j2  guest-confirm.html  guest-confirm.html.j2  guest-form.html  guest-form.html.j2  index.html  index.html.j2  menschen.html  menschen.html.j2  orga-notes-essen.html  orga-notes-essen.html.j2  overview.html  overview.html.j2  profile-404.html  profile-404.html.j2  profile-edit.html  profile-edit.html.j2  profile.html  profile.html.j2  programm.html  programm.html.j2  programmpunkt-404.html  programmpunkt-404.html.j2  programmpunkt-delete.html  programmpunkt-delete.html.j2  programmpunkt-edit.html  programmpunkt-edit.html.j2  programmpunkt.html  programmpunkt.html.j2
templates/wiki/: 404.html.j2  article.html.j2  edit.html.j2  history.html.j2  index.html.j2  namespace-404.html.j2
