[package]
name = "gefolge-web-back"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
futures = "0.3.26"
serde_json = "1.0.93"
serenity = { version = "0.11.5", default-features = false, features = ["rustls_backend", "model"] }
sqlx = { version = "0.6.2", default-features = false, features = ["json", "macros", "postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.38"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
