[package]
name = "gefolge-web-back"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }
clap = { version = "4.1.6", features = ["derive"] }
futures = "0.3.26"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.93"
serde_plain = "1.0.1"
serenity = { default-features = false, features = ["rustls_backend", "model"], version = "0.12" }
sqlx = { version = "0.8", default-features = false, features = ["chrono", "json", "macros", "postgres", "runtime-tokio-rustls"] }
thiserror = "2"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
