[package]
name = "gefolge-web"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[features]
dev = []
production = []
local = []

[dependencies]
async-proto = { version = "0.23", features = ["chrono-tz", "tokio-tungstenite"] }
base64 = "0.22"
chrono = { version = "0.4.24", features = ["serde", "clock"], default-features = false }
chrono-tz = { version = "0.9", features = ["serde"] }
clap = { version = "4.5.34", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["deref", "into"] }
futures = "0.3.26"
gefolge-web-lib = { path = "../lib" }
itertools = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["charset", "hickory-dns", "http2", "macos-system-configuration", "rustls-tls"] }
ricochet-robots-websocket = { git = "ssh://git@github.com/dasgefolge/ricochet-robots.git", branch = "main" }
rocket = { features = ["secrets"], version = "0.5" }
rocket-basicauth = { git = "https://github.com/fenhl/rocket-basicauth", branch = "master" }
rocket-util = { git = "https://github.com/fenhl/rocket-util", branch = "main", features = ["reqwest"] }
rocket_oauth2 = { version = "0.5" }
rocket_ws = { version = "0.1" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serenity = { default-features = false, features = ["model", "rustls_backend"], version = "0.12" }
sqlx = { version = "0.8", features = ["json", "macros", "postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.38"
tokio = { version = "1.26.0", features = ["process", "sync", "time"] }
url = "2.3.1"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main", features = ["chrono", "rocket", "reqwest", "serde", "serde_json"] }

[target."cfg(unix)".dependencies]
xdg = "2.4.1"

[build-dependencies]
futures = "0.3.26"
git2 = "0.19"
thiserror = "1.0.38"
tokio = "1.26.0"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
