[package]
name = "gefolge-web-lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[features]
peter = [
    "dep:futures",
    "dep:itertools",
    "dep:num-traits",
    "dep:quantum-werewolf",
    "dep:rand",
    "serenity/model",
    "serenity/rustls_backend",
    "dep:serenity-utils",
    "sqlx/chrono",
    "dep:twitch_helix",
    "wheel/reqwest",
    "wheel/tungstenite021",
]

[dependencies]
async-proto = { version = "0.26", features = ["chrono-tz", "semver"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
futures = { version = "0.3", optional = true }
itertools = { version = "0.15", optional = true }
lazy-regex = "3"
num-traits = { version = "0.2", optional = true }
quantum-werewolf = { git = "https://github.com/dasgefolge/quantum-werewolf", optional = true }
rand = { version = "0.10", optional = true }
rocket = { features = ["secrets"], version = "0.5" }
rocket-util = { git = "https://github.com/fenhl/rocket-util", features = ["reqwest"] }
semver = "1"
serde = "1"
serde_json = { package = "serde_json_path_to_error", version = "0.1" } #TODO which features to use for correct decimal handling? Or use async-json instead?
serde_with = "3"
serenity = { version = "0.12", default-features = false }
serenity-utils = { git = "https://github.com/fenhl/serenity-utils", optional = true }
sqlx = { version = "0.8", features = ["json", "macros", "postgres", "runtime-tokio-rustls"] }
thiserror = "2"
tokio = { version = "1", features = ["time"] }
twitch_helix = { git = "https://github.com/fenhl/rust-twitch-helix", optional = true } #TODO publish to crates.io
wheel = { git = "https://github.com/fenhl/wheel", features = ["chrono"] }

[target."cfg(unix)".dependencies]
xdg = "3"
